--- a/public/assets/css/variables.css
+++ b/public/assets/css/variables.css
@@ -24,5 +24,4 @@
     --spacing-7: 48px;
     --font-heading: 'Space Grotesk';
     --font-body: Inter;
-    --mobile-content-gutters: var(--spacing-6) var(--spacing-3);
 }
